Develop (#5)
* +refactoring

* ----
