# internal/transport/http/router.go
@@ -1,0 +1,37 @@
+package http
+
+import (
+	"auth-service/internal/handler"
+	"net/http"
+
+	"github.com/go-chi/chi/v5"
+	"github.com/go-chi/chi/v5/middleware"
+	httpSwagger "github.com/swaggo/http-swagger"
+)
+
+func NewRouter(authHandler *handler.AuthHandler) *chi.Mux {
+	r := chi.NewRouter()
+
+	r.Use(middleware.RequestID)
+	r.Use(middleware.RealIP)
+	r.Use(middleware.Logger)
+	r.Use(middleware.Recoverer)
+
+	// versioning
+	r.Route("/api/v1", func(r chi.Router) {
+		r.Route("/auth", func(r chi.Router) {
+			r.Post("/register", authHandler.RegisterHandler)
+			r.Post("/login", authHandler.AuthenticateHandler)
+			r.Post("/refresh", authHandler.RefreshHandler)
+		})
+	})
+
+	r.Get("/swagger/*", httpSwagger.WrapHandler)
+
+	r.Get("/health", func(w http.ResponseWriter, r *http.Request) {
+		w.WriteHeader(200)
+		w.Write([]byte("ok"))
+	})
+
+	return r
+}
